version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Mechanical/Fields/Adapters/DSBoltPretensionAdapter.rst.txt
.. vale off



:class:`DSBoltPretensionAdapter`
================================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Mechanical.Fields.Adapters.DSBoltPretensionAdapter

   Bases: :py:obj:`object`


   
   Adapter dedicated to IDSBoltPretensionAuto objects.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DSBoltPretensionAdapter

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ChangeFieldDefinitionType`
            - ChangeFieldDefinitionType method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FieldProvider`
            - Gets the wrapped pretensionboldLoad object from Mechanical.







Property detail
---------------
.. py:property:: FieldProvider
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSPretensionBoltLoadAuto]


   
   Gets the wrapped pretensionboldLoad object from Mechanical.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ChangeFieldDefinitionType(componentType: Ansys.Common.Interop.CAERepObjects.AnsBCLVType, newType: Ansys.Common.Interop.AnsMaterial.kEDDataType) -> None

   
   ChangeFieldDefinitionType method.

   ..
       !! processed by numpydoc !!



.. vale on